--- a/app/assets/stylesheets/helpers/_variables.scss
+++ b/app/assets/stylesheets/helpers/_variables.scss
@@ -30,6 +30,7 @@ $blue-008: rgb(142, 160, 194); // #8EA1C2
 $blue-009: rgb(125, 150, 188); // #7D96BC
 $blue-010: rgb(247, 248, 251); // #F7F8FB
 $blue-011: rgb(196, 210, 233); // $C5D2EA
+$blue-012: rgb(103, 130, 176); // #6782B0
 
 $tan-001: rgb(242, 221, 209); // #F2DDD1
 $tan-002: rgb(196, 170, 127); // #C4AA7F
