--- a/app/views/static_pages/terms_of_service.html.haml
+++ b/app/views/static_pages/terms_of_service.html.haml
@@ -1,7 +1,8 @@
 .container
   .row
     .col-xs-10.col-xs-offset-1
-      %h1.about-page__header Terms &amp; Conditions
+      .text-center
+        %h1.about-page__header.fancy Terms &amp; Conditions
       %p.about-page__tagline Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis.
 
       .row.about-page__subsection.with-image.image-left
