--- a/app/views/gift_selections/_gift_basket.haml
+++ b/app/views/gift_selections/_gift_basket.haml
@@ -2,7 +2,7 @@
 
 .gift-basket{data: {behavior: 'gift-basket-container', profile_id: profile.id, channel_name: 'GiftSelectionsChannel'}}
   .gift-basket__inner-wrap
-    = link_to "< Back to Shopping", '#', data: {behavior: 'close-gift-basket'}, class: 'gift-basket__header small', onClick: "ga('send', 'event', 'basket', 'open-close', 'close');" 
+    = link_to "< Back to Shopping", '#', data: {behavior: 'close-gift-basket'}, class: 'gift-basket__header small', onClick: "ga('send', 'event', 'basket', 'open-close', 'close');"
     .gift-basket__main
       %div{data: {behavior: 'gift-basket-gifts'}}
         = render 'gift_selections/index', profile: profile
@@ -10,15 +10,20 @@
     .gift-basket__footer
       %h4.gift-basket__footer__heading
         Subtotal
-        %span.pull-right &#8212;
-      %p.help.gift-basket__footer__text 
-        We're not fulfilling orders during this testing period. Thank you for taking Wrapt for a spin! We hope you like what you found.
-      
+        %span.pull-right.js-subtotal
+          = number_to_currency(profile.selling_price_total)
+
+      %p.help.gift-basket__footer__text
+        %span.js-num-gifts-words
+          = pluralize(profile.gift_selections.count, 'item')
+        in your cart
+      -#  We're not fulfilling orders during this testing period. Thank you for
+      -#  taking Wrapt for a spin! We hope you like what you found.
 
       -#= link_to 'SEND GIFT SELECTION NOTIFICATION', new_profile_giftee_invitation_path(profile), class: 'btn btn-primary btn-full-width btn-gift-basket-submit', data: {loads_in_pjax_modal: true, behavior: 'gift-basket-submit'}, onClick: "ga('send', 'event', 'basket', 'share with giftee', 'step 1 - button');"
-      = link_to 'CHECK OUT COMING SOON', '#', class: 'btn btn-primary btn-full-width btn-gift-basket-submit'
+      = link_to 'CHECK OUT', ecommerce_checkout_gift_wrapt_path(profile_id: profile.id), class: 'btn btn-primary btn-full-width btn-gift-basket-submit'
 
-      
+
 
 - content_for :page_js do
   :javascript
