[#151336241] Refine vendor confirmation page

--- a/app/views/ecommerce/vendor_confirmations/error.haml
+++ b/app/views/ecommerce/vendor_confirmations/error.haml
@@ -1,5 +1,5 @@
 %h2 Sorry
 
 %p
-  We could not match that request to a vendor or order or the order has already
-  been finalized. Please contact Wrapt support for help.
+  We could not match that request to a vendor or order.  Please contact Wrapt
+  support for help.
