--- a/app/views/ecommerce/vendor_confirmations/show.haml
+++ b/app/views/ecommerce/vendor_confirmations/show.haml
@@ -2,19 +2,7 @@
   .col-sm-6
     Order: #{@purchase_order.order_number}
 
-    %table.table.table-striped
-      %thead
-        %tr
-          %th Description
-          %th SKU
-          %th Quantity
-      %tbody
-        - @purchase_order.line_items.each do |line_item|
-          - product = line_item.orderable
-          %tr
-            %td= product.description
-            %td= product.vendor_sku
-            %td= line_item.quantity
+    = render "order_details"
 
     = simple_form_for @purchase_order, url: url_for, method: :put do |f|
       = f.input :vendor_acknowledgement_status, collection: [ ['I have all products and will ship them to the customer', PurchaseOrder::FULFILL], ['I cannot fulfill this order', PurchaseOrder::DO_NOT_FULFILL] ]
