--- a/app/views/ecommerce/checkout/edit_shipping.haml
+++ b/app/views/ecommerce/checkout/edit_shipping.haml
@@ -1,3 +1,6 @@
+.container
+  = render 'header'
+
 = link_to "« Set Address", url_for(action: :edit_address)
 
 = simple_form_for @customer_order, url: url_for, method: :patch do |f|
