--- a/app/views/ecommerce/checkout/edit_address.haml
+++ b/app/views/ecommerce/checkout/edit_address.haml
@@ -1,3 +1,6 @@
+.container
+  = render 'header'
+  
 = link_to "« Gift Wrapt", url_for(action: :edit_gift_wrapt)
 
 = simple_form_for @customer_order, url: url_for, method: :patch do |f|
