--- a/app/assets/stylesheets/modules/_checkout.scss
+++ b/app/assets/stylesheets/modules/_checkout.scss
@@ -23,6 +23,13 @@
 .co-container {
   @include shadowed-box__gray;
   background-color: #FFFFFF;
-  padding: 32px 16px;
+  padding: 32px;
   margin: 40px 0px;
+  position: relative;
+
+  button[type="submit"] {
+    position: absolute;
+    right: 32px;
+    bottom: -28px;
+  }
 }
