--- a/app/views/ecommerce/checkout/edit_shipping.haml
+++ b/app/views/ecommerce/checkout/edit_shipping.haml
@@ -1,10 +1,13 @@
 .container
   = render 'header'
+  .row
+    .col-xs-12.col-md-10.col-md-offset-1
+      .co-container
+        %h2.light Shipping Information
 
-= link_to "« Set Address", url_for(action: :edit_address)
+        = simple_form_for @customer_order, url: url_for, method: :patch do |f|
+          = f.input :shippo_token_choice, collection: @shipping_choices
+          %button.btn.btn-primary{type: 'submit'}
+            = "Next <svg class='btn__icon-caret-right'><use xlink:href='#icon-caret-right'></use></svg>".html_safe
 
-= simple_form_for @customer_order, url: url_for, method: :patch do |f|
-  = f.input :shippo_token_choice, collection: @shipping_choices
-  = f.submit
-
-= render "debug", customer_order: @customer_order
+  = render "debug", customer_order: @customer_order
