Shipping parcel work

--- a/app/views/admin/gifts/show.html.haml
+++ b/app/views/admin/gifts/show.html.haml
@@ -35,6 +35,10 @@
       %b Box:
       = @gift.pretty_parcel&.description
 
+    %p
+      %b Shipping Box:
+      = @gift.shipping_parcel&.description
+
     %h3 Products
     - if @gift.products.none?
       %p
