--- a/app/views/admin/gifts/_form.html.haml
+++ b/app/views/admin/gifts/_form.html.haml
@@ -20,8 +20,12 @@
         = f.association :product_subcategory, as: :select, collection: (@gift.product_category&.children || []), input_html: {data: {behavior: 'product-subcategory-input'}}
         = f.input :wrapt_sku, label: 'Wrapt SKU', disabled: true
 
-        = f.fields_for :gift_parcels do |gp|
-          = gp.input :parcel_id, collection: Parcel.active.all, value_method: :id, label_method: :description, input_html: {}
+        = f.fields_for :pretty_parcels do |gp|
+          = gp.input :parcel_id, collection: Parcel.active.pretty.all, value_method: :id, label_method: :description, input_html: {}, label: 'Gift Box'
+          = gp.input :gift_id, as: :hidden, value: @gift.id
+
+        = f.fields_for :shipping_parcels do |gp|
+          = gp.input :parcel_id, collection: Parcel.active.shipping.all, value_method: :id, label_method: :description, input_html: {}, label: 'Shipping Box'
           = gp.input :gift_id, as: :hidden, value: @gift.id
 
     = f.input :available, label: 'Availabe to Customers'
