Shipping wrangling. bug fix for checkout. parcel handling. stats

--- a/app/views/admin/ecommerce/dashboard/index.haml
+++ b/app/views/admin/ecommerce/dashboard/index.haml
@@ -13,3 +13,5 @@
         %td= link_to 'Vendor Purchase Orders', admin_ecommerce_purchase_orders_path, class: 'btn btn-default btn-xs'
       %tr
         %td= link_to 'Vendor Billing', admin_ecommerce_billings_path, class: 'btn btn-default btn-xs'
+      %tr
+        %td= link_to 'Stats', admin_ecommerce_stats_path, class: 'btn btn-default btn-xs'
