--- a/app/views/ecommerce/vendor_confirmations/show.haml
+++ b/app/views/ecommerce/vendor_confirmations/show.haml
@@ -6,7 +6,10 @@
 
     = simple_form_for @purchase_order, url: url_for, method: :put do |f|
       = f.input :vendor_acknowledgement_status, collection: [ ['I have all products and will ship them to the customer', PurchaseOrder::FULFILL], ['I cannot fulfill this order', PurchaseOrder::DO_NOT_FULFILL] ]
+
       = f.input :vendor_acknowledgement_reason, collection: PurchaseOrder::NO_FULFILL_REASONS
+      SELECT2 needed: Can fill in something else if desired.
+
       = f.submit
       = content_for :page_js do
         :javascript
